--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         >
         <activity
-            android:name="com.sothree.slidinguppanel.demo.DemoActivity"
+            android:name="com.sothree.slidinguppanel.demo.DemoActivityStart"
             android:label="@string/app_name"
             >
             <intent-filter>
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".DemoActivity_1"/>
+        <activity android:name=".DemoActivity_2"/>
+        <activity android:name=".DemoActivity_3"/>
     </application>
 
 </manifest>
